Added user profile, global search page, connection status

--- a/customer/templates/customer/orders.html
+++ b/customer/templates/customer/orders.html
@@ -7,11 +7,19 @@
 
     <div class="order-filter">
         <ul>
-            <li><a href="{% url 'orders' %}?q=in_processing" class="in_processing" name="q" value="in_processing">В обработке</a></li>
-            <li><a href="{% url 'orders' %}?q=sent" class="sent" name="q" value="sent">Отправлен</a></li>
-            <li><a href="{% url 'orders' %}?q=wait" class="wait" name="q" value="wait">Ожидает</a></li>
-            <li><a href="{% url 'orders' %}?q=completed" class="completed" name="q" value="completed">Завершен</a></li>
-            <li><a href="{% url 'orders' %}?q=cancel" class="cancel" name="q" value="cancel">Отменен</a></li>
+        {% for sort in order_sort %}
+            <li>
+                {% if order_sort_selected == sort.query %}
+                <a href="{% url 'orders' %}?q={{ sort.query }}" class="{{ sort.query }} selected" name="q" value="{{ sort.query }}">
+                    {{ sort.title }}
+                </a>
+                {% else %}
+                <a href="{% url 'orders' %}?q={{ sort.query }}" class="{{ sort.query }}" name="q" value="{{ sort.query }}">
+                    {{ sort.title }}
+                </a>
+                {% endif %}
+            </li>
+        {% endfor %}
         </ul>
 
     </div>
