--- a/store/static/store/scss/authors.scss
+++ b/store/static/store/scss/authors.scss
@@ -12,19 +12,19 @@
     .authors-title {
         margin-top: 15px;
         border-radius: 5px;
-        background-color: $ligth_color;
+        background-color: $header_footer_color;
         display: inline-block;
         padding: 10px;
         padding-left: 70px;
         padding-right: 70px;
         h3 {
-            color: black;
+            color: $ligth_color;
             font-size: 24px;
         }
     }
 
     .authors {
-        background-color: $ligth_color;
+        background-color: $header_footer_color;
         margin-top: 15px;
         border-radius: 5px;
         padding: 10px;
@@ -33,9 +33,8 @@
             input {
                 padding: 10px;
                 width: 100%;
-                border: 2px solid black;
+                border: 2px solid $ligth_color;
                 border-radius: 10px;
-                
             }
         }
 
@@ -54,16 +53,16 @@
                 vertical-align: top;
                 .title {
                     font-size: 24px;
-                    color: black;
+                    color: $ligth_color;
                 }
                 .books-count {
-                    color: grey;
+                    color: $light_gray_color;
                 }
             }
             &:hover {
-                outline: 2px solid $header_footer_color;
-                border-radius: 10px;
-                background-color: #171c4b0e;
+                outline: 2px solid $selected_color;
+                background-color: $opacity_selected_color;
+                border-radius: 5px;
             }
         }
     }
