--- a/store/static/store/scss/sidebar-genres.scss
+++ b/store/static/store/scss/sidebar-genres.scss
@@ -1,6 +1,7 @@
 @import "static-variables.scss";
 
-.genres {
+.sidebar-item {
+    margin-bottom: 15px;
     padding: 10px;
     background-color: $header_footer_color;
     border-radius: 5px;
@@ -18,7 +19,8 @@
             position: absolute;
             top: 1px;
             left: 5px;
-            width: 40px;
+            height: 40px;
+            border-radius: 5px;
         }
         .genre-title {
             color: $ligth_color;
