--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -35,17 +35,19 @@
                 
                 <div class="col-lg-12 login-title">
                     {% block title %}
-                    ВОЙТИ
+                        ВОЙТИ
                     {% endblock %}
                 </div>
 
-                {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
+                {% block errors %}
+                    {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                {% endblock %}
 
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
@@ -56,7 +58,16 @@
                             {% for field in form %}
                             <div class="form-group">
                                 <label class="form-control-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                
                                 <p>{{ field }}</p>
+
+                                {% if field.errors %}
+                                <ul class="errors">
+                                    {% for error in field.errors %}
+                                        <li class="error">{{ error }}</li>
+                                    {% endfor %}
+                                </ul>
+                                {% endif %}
                             </div>
                             {% endfor %}
                             
