--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -3,9 +3,18 @@
 
 
 {% block title %}
-РЕГИСТРАЦИЯ
+    РЕГИСТРАЦИЯ
 {% endblock %}
 
+{% block errors %}
+    {% if form.non_field_errors %}
+    <ul class="messages">
+        {% for error in form.non_field_errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endblock %}
 
 {% block buttom %}
 <div class="col-lg-12 loginbttm">
