--- a/store/templates/store/paginator.html
+++ b/store/templates/store/paginator.html
@@ -6,18 +6,38 @@
     
     <span class="list-pages">
         {% if page_obj.has_previous %}
-            <a class="previous btn" href="?page={{ page_obj.previous_page_number }}"><div class="arrow"></div></a>
+            <a class="previous btn" 
+            {% if other_params %}
+                href="?{{ other_params }}&page={{ page_obj.previous_page_number }}" 
+            {% else %}
+                href="?page={{ page_obj.previous_page_number }}"
+            {% endif %}><div class="arrow"></div></a>
         {% else %}
             <span class="previous btn"><div class="arrow"></div></span>
         {% endif %}
         
         {% if page_obj.has_previous %}
-            <a href="?page=1">1</a>
+            <a
+            {% if other_params %}
+                href="?{{ other_params }}&page=1" 
+            {% else %}
+                href="?page=1"
+            {% endif %}>1</a>
             {% if page_obj.number > 3 %}
                 <span>...</span>
-                <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+                <a
+                {% if other_params %}
+                    href="?{{ other_params }}&page={{ page_obj.previous_page_number }}" 
+                {% else %}
+                    href="?page={{ page_obj.previous_page_number }}"
+                {% endif %}>{{ page_obj.previous_page_number }}</a>
             {% elif page_obj.number != 2 %}
-                <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+                <a
+                {% if other_params %}
+                    href="?{{ other_params }}&page={{ page_obj.previous_page_number }}" 
+                {% else %}
+                    href="?page={{ page_obj.previous_page_number }}"
+                {% endif %}>{{ page_obj.previous_page_number }}</a>
             {% endif %}
         {% endif %}
 
@@ -26,17 +46,37 @@
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+            <a
+            {% if other_params %}
+                href="?{{ other_params }}&page={{ page_obj.next_page_number }}" 
+            {% else %}
+                href="?page={{ page_obj.next_page_number }}"
+            {% endif %}>{{ page_obj.next_page_number }}</a>
             {% if page_obj.next_page_number|add:"1" <  page_obj.paginator.num_pages %}
                 <span>...</span>
-                <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                <a
+                {% if other_params %}
+                    href="?{{ other_params }}&page={{ page_obj.paginator.num_pages }}" 
+                {% else %}
+                    href="?page={{ page_obj.paginator.num_pages }}"
+                {% endif %}>{{ page_obj.paginator.num_pages }}</a>
             {% elif page_obj.next_page_number !=  page_obj.paginator.num_pages %}
-                <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                <a
+                {% if other_params %}
+                    href="?{{ other_params }}&page={{ page_obj.paginator.num_pages }}" 
+                {% else %}
+                    href="?page={{ page_obj.paginator.num_pages }}"
+                {% endif %}>{{ page_obj.paginator.num_pages }}</a>
             {% endif %}
         {% endif %}
 
         {% if page_obj.has_next %}
-            <a class="next btn" href="?page={{ page_obj.next_page_number }}"><div class="arrow"></div></a>
+            <a class="next btn"
+            {% if other_params %}
+                href="?{{ other_params }}&page={{ page_obj.next_page_number }}" 
+            {% else %}
+                href="?page={{ page_obj.next_page_number }}"
+            {% endif %}><div class="arrow"></div></a>
         {% else %}
             <span class="next btn"><div class="arrow"></div></span>
         {% endif %} 
